# lyriks-desktop

./: pyproject.toml
lyriks/: lyrix.py  main.py  res.qrc  rsrc_rc.py
lyriks/mpris/: manage.py
lyriks/ui/: LoginPage.qml  LyricsPage.qml  main.qml
