[tool.poetry]
name = "lyriks"
version = "0.1.0"
description = "Get the lyrics of the currently listening song with Lyrix, built for KDE"
authors = ["Srevin Saju <srevinsaju@sugarlabs.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6, <3.10"
PySide6 = "^6.1.1"
dbus-python = "^1.2.16"
lyrix-api = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
